Fix for visibility of mobile nav bar

--- a/static/css/joekalbcom_style.css
+++ b/static/css/joekalbcom_style.css
@@ -530,7 +530,7 @@ button.button-contact-form-entry:active {
 }
 
 .mobile-only, i.mobile-only {
-  display: none;
+  display: none !important;
 }
 
 .invisible {
