--- a/static/css/joekalbcom_style_mobile.css
+++ b/static/css/joekalbcom_style_mobile.css
@@ -3,7 +3,7 @@
 }
 
 .mobile-only, i.mobile-only {
-  display: inherit;
+  display: inherit !important;
 }
 
 .desktop-only {
